--- a/index.html
+++ b/index.html
@@ -312,10 +312,12 @@
 
               <div class="icon-wrapper">
                 <i class="fa-brands fa-linkedin icon"></i>
+                <a href="https://www.linkedin.com/in/vikrant-sharma-0349ba19a/"></a>
+
+
                 <i class="fa-brands fa-github icon"></i>
-                <i class="fa-brands fa-twitter icon"></i>
-                <i class="fa-brands fa-instagram icon"></i>
-                <i class="fa-regular fa-envelope icon"></i>
+                <a href="https://github.com/vtrixe"></a>
+               
               </div>
 
             </div>
