--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </p>
                         <div class="btn-grp">
                             <button class="btn-pink btn-project">Read More</button>
-                            <a href="">
+                            <a href="https://github.com/vtrixe/GAMINGMETAVERSE.github.io">
                             <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                             </a>
                             <a href="">
