--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <a href="https://github.com/vtrixe/GAMINGMETAVERSE.github.io">
                             <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                             </a>
-                            <a href="">
+                            <a href="https://gamingmetaverse-github-io-git-main-vtrixe.vercel.app/">
                             <i title="Live Link" class="fa-solid fa-link icon"></i>
                             </a>
                         </div>
