--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                      
                         </div>
 
-                        <h2 class="project-heading">Metaverse</h2>
+                        <h2 class="project-heading">Gamer's Paradise</h2>
 
                         <p class="project-subHeading">A free flowing UI for a Gaming Metaverse Website
                         </p>
@@ -119,16 +119,16 @@
   
                     
                     </div>
-                    <h2 class="project-heading">Gamer's Paradise</h2>
+                    <h2 class="project-heading">Gamering Heaven</h2>
                     <p class="project-sub-heading">
                       A Multi-Page Frontend for a Gaming Company
                     </p>
                     <div class="btn-group">
                       <button class="btn-pink btn-project">Read More</button>
-                      <a href="">
+                      <a href="https://github.com/vtrixe/GAMINGHEAVENREACT">
                         <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                       </a>
-                      <a href="">
+                      <a href="https://gamingheaven.netlify.app/">
                         <i title="Live Link" class="fa-solid fa-link icon"></i>
                       </a>
                     </div>
